PO-2255 - fix tests after refactor